--- a/gRPC İle File Upload ve File Download Uygulaması/GrpcServer/GrpcServer.csproj
+++ b/gRPC İle File Upload ve File Download Uygulaması/GrpcServer/GrpcServer.csproj
@@ -6,10 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<Protobuf Include="Protos\fileTransport.proto" GrpcServices="Server" />
+	</ItemGroup>
+	
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
   </ItemGroup>
