--- a/gRPC İle File Upload ve File Download Uygulaması/GrpcClientDowland/GrpcClientDowland.csproj
+++ b/gRPC İle File Upload ve File Download Uygulaması/GrpcClientDowland/GrpcClientDowland.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <!--<ItemGroup>
+    <None Remove="Protos\fileTransport.proto" />
+  </ItemGroup>-->
+
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.24.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.55.0" />
@@ -14,6 +18,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\fileTransport.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
