--- a/gRPC İle File Upload ve File Download Uygulaması/GrpcServer/GrpcServer.csproj
+++ b/gRPC İle File Upload ve File Download Uygulaması/GrpcServer/GrpcServer.csproj
@@ -13,5 +13,9 @@
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="wwwroot\files\" />
+  </ItemGroup>
 
 </Project>
